src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>PRF Partner Sales Process</fullName>
        <description>Sales Process for the Partner Community</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded %28preliminary%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal %2F Presentation</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Qualification%2FInventarisation</fullName>
        </values>
        <values>
            <fullName>Tasting %2F Trial</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tender Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded %28preliminary%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Develop Proposal %2F Presentation</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Pending Opportunity</fullName>
        </values>
        <values>
            <fullName>Pretender</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Qualification%2FInventarisation</fullName>
        </values>
        <values>
            <fullName>Tasting %2F Trial</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Lifecycle__c</fullName>
        <label>Account Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_AccountLifecycle</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName  &amp; &apos; &apos; &amp;  Account.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Address__c</fullName>
        <formula>Account.BillingStreet &amp; &quot; &quot; &amp; Account.BillingCity &amp; &quot; &quot; &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode &amp; &quot; &quot; &amp; Account.BillingCountry &amp; BR() &amp;
HYPERLINK(
&quot;http://maps.google.com/maps?q=&quot;&amp;
Account.BillingStreet&amp;
&quot;,+&quot; &amp;
Account.BillingCity&amp;
&quot;+&quot;&amp;
Account.BillingState&amp;
&quot;+&quot;&amp;
Account.BillingPostalCode&amp;
&quot;+&quot;&amp;
Account.BillingCountry&amp;
&quot;&amp;t=m&amp;z=16&quot;,
IMAGE(
&quot;http://maps.google.com/maps/api/staticmap?center=&quot;&amp;
Account.BillingStreet&amp;
&quot;,+&quot; &amp;
Account.BillingCity&amp;
&quot;+&quot;&amp;
Account.BillingState&amp;
&quot;+&quot;&amp;
Account.BillingPostalCode&amp;
&quot;+&quot;&amp;
Account.BillingCountry&amp;
&quot;&amp;zoom=16&amp;format=png&amp;maptype=roadmap&amp;mobile=false&amp;language=English&amp;markers=|color:Green|label:Address|&quot;&amp;
Account.BillingStreet&amp;
&quot;,+&quot; &amp;
Account.BillingCity&amp;
&quot;+&quot;&amp;
Account.BillingState&amp;
&quot;+&quot;&amp;
Account.BillingPostalCode&amp;
&quot;+&quot;&amp;
Account.BillingCountry&amp;
&quot;&amp;size=350x250&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;))</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery_Date_Partner__c</fullName>
        <label>Actual Delivery Date (Partner)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Financial_Information__c</fullName>
        <inlineHelpText>Information on Financials and explanation of the positive or negative Delta</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information_on_Won_Lost__c</fullName>
        <label>Additional Information on Won/Lost</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Reason__c</fullName>
        <inlineHelpText>Please fill in any additional information related to the closing reason of this opportunity.</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_NOS_Current_Agreement__c</fullName>
        <inlineHelpText>Should reflect actual monthly revenues from current agreement annualised, such as ingredient revenues or revenues from rental income. NOT APPLICABLE for NEW Customers (PROSPECT Accounts) and for CROSS/UPSELL Opportunities on existing Customers.</inlineHelpText>
        <label>Annual NOS Current Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Barista_Station__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barista Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget bevestigd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign.Name</formula>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coffee_Amount__c</fullName>
        <label>Coffee Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_01</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Coffee_Blend_Type_1__c</fullName>
        <label>Coffee Blend Type 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coffee_Blend_Type_2__c</fullName>
        <label>Coffee Blend Type 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Account)</relationshipLabel>
        <relationshipName>Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concepts_Amount__c</fullName>
        <label>Concepts Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_07</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Partner_Contact__r.FirstName &amp; &quot; &quot; &amp; Partner_Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>6 Years</fullName>
                </value>
                <value>
                    <fullName>7 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Agreement_New_UX__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__aptsAgreementCreationHome?c__recordId=&quot;&amp;Id&amp;&quot;&amp;c__accountId=&quot;&amp;AccountId&amp;&quot;&amp;c__recordName=&quot;&amp; SUBSTITUTE(Name, &quot;&amp;&quot;, &quot;%26&quot;)  &amp;&quot;&quot;, IMAGE(&quot;/resource/APTS_CreateAgreement&quot;, &quot;Create Agreement&quot;) , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Agreement (New UX)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_sell_Information__c</fullName>
        <label>Cross-sell Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tea Professional</fullName>
                </value>
                <value>
                    <fullName>Tea master selection</fullName>
                </value>
                <value>
                    <fullName>Slow tea</fullName>
                </value>
                <value>
                    <fullName>Caps</fullName>
                </value>
                <value>
                    <fullName>Cups</fullName>
                </value>
                <value>
                    <fullName>Milk</fullName>
                </value>
                <value>
                    <fullName>Cacao</fullName>
                </value>
                <value>
                    <fullName>Sugar</fullName>
                </value>
                <value>
                    <fullName>Soup</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Brewer__c</fullName>
        <label>Current Brewer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Brewing_System__c</fullName>
        <label>Brewing System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Single Serve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Current Supplier)</relationshipLabel>
        <relationshipName>Opportunities_Current_Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISBLANK(Estimated_Annual_NOS_Turnover__c), &quot;Estimated Annual NOS/Turnover, &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;IF(ISBLANK(Annual_NOS_Current_Agreement__c), &quot;Annual NOS Current Agreement, &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;IF( ISBLANK(One_Time_NOS__c), &quot;One-Time NOS, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISBLANK( Expected_Revenue_Start_Date__c), &quot;Expected Revenue Start Date&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISBLANK(Estimated_Annual_NOS_Turnover__c), 0, 25) + IF( ISBLANK(Annual_NOS_Current_Agreement__c), 0, 25) + IF( ISBLANK(One_Time_NOS__c), 0,25) + IF( ISBLANK( Expected_Revenue_Start_Date__c), 0,25)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Idle__c</fullName>
        <formula>DATEVALUE(NOW()) - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Idle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verkenning voltooid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Partner_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_NOS_Pipeline__c</fullName>
        <formula>IF( ISBLANK(Estimated_Annual_NOS_Turnover__c) , 0, Estimated_Annual_NOS_Turnover__c) - IF( ISBLANK(Annual_NOS_Current_Agreement__c) , 0, Annual_NOS_Current_Agreement__c)</formula>
        <inlineHelpText>Shows the NOS Pipeline, reflecting the Delta from Current Agreement. One-Tine NOS is not included.</inlineHelpText>
        <label>Pipeline Annual NOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_NOS_Turnover__c</fullName>
        <inlineHelpText>This should reflect the estimated monthly revenues annualised, such as ingredient revenues or revenues from rental income.</inlineHelpText>
        <label>Estimated Annual NOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_CY_NOS_Pipeline__c</fullName>
        <formula>IF(ISBLANK(One_Time_NOS__c),0,One_Time_NOS__c)  + 
(
(IF(ISBLANK(Estimated_Annual_NOS_Pipeline__c),0,Estimated_Annual_NOS_Pipeline__c)  *  
IF(ISBLANK(Expected_Revenue_Start_Date__c), 0,
(DATE( Year(Expected_Revenue_Start_Date__c), 12, 31) -  Expected_Revenue_Start_Date__c)) 
/ 365)
)</formula>
        <inlineHelpText>Shows the NOS Pipeline for the Calendar Year (CY) that equals the year of the field “Expected Revenue Start Date”, reflecting also the Delta from Current Agreement. One-Time NOS is included.</inlineHelpText>
        <label>Pipeline CY Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Drinks_per_year__c</fullName>
        <inlineHelpText>Annual Value</inlineHelpText>
        <label>Estimated # of Drinks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Y1_NOS_Pipeline__c</fullName>
        <formula>IF(ISBLANK(Amount), 0, Amount) + IF(ISBLANK(Estimated_Annual_NOS_Turnover__c  ), 0, Estimated_Annual_NOS_Turnover__c ) - IF(ISBLANK(Annual_NOS_Current_Agreement__c), 0, Annual_NOS_Current_Agreement__c )</formula>
        <label>Estimated Y1 NOS Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Installation_Date__c</fullName>
        <label>Expected Installation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Location__c</fullName>
        <label>Expected Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Start_Date__c</fullName>
        <label>Expected Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Volume_KG_LT__c</fullName>
        <inlineHelpText>Annual Value</inlineHelpText>
        <label>Expected Volume KG/LT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax_Contact__c</fullName>
        <formula>Partner_Contact__r.Fax</formula>
        <label>Fax(Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Expiration_Date_Current_Contract__c</fullName>
        <label>First Expiration Date Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>TEXT(Partner_Contact__r.Function__c)</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_To_Market__c</fullName>
        <label>Go-To-Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Reden van verlies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machines_Amount__c</fullName>
        <label>Machines Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_04</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Make_Private__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Make Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Partner_Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Amount__c</fullName>
        <label>&amp; More Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family_text__c</field>
            <operation>equals</operation>
            <value>SAP_03</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Need_Cluster__c</fullName>
        <label>Need Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Scheduled coffee moment</fullName>
                </value>
                <value>
                    <fullName>2. Coffee break on the go</fullName>
                </value>
                <value>
                    <fullName>3. Effective Working Time</fullName>
                </value>
                <value>
                    <fullName>4. Convenience /Quality in-room</fullName>
                </value>
                <value>
                    <fullName>5. Comfortable waiting time</fullName>
                </value>
                <value>
                    <fullName>6. Social/connecting break</fullName>
                </value>
                <value>
                    <fullName>7. Indulging coffee moment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Drinks_per_year__c</fullName>
        <inlineHelpText>Agreement Based</inlineHelpText>
        <label>Number of Drinks per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obligation_Expiration_Date__c</fullName>
        <label>Obligation Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occassion__c</fullName>
        <label>Occasion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coffee corner</fullName>
                </value>
                <value>
                    <fullName>Waiting Area</fullName>
                </value>
                <value>
                    <fullName>To Go</fullName>
                </value>
                <value>
                    <fullName>Reception/Lobby</fullName>
                </value>
                <value>
                    <fullName>In room - Bus/Hot</fullName>
                </value>
                <value>
                    <fullName>Production Area</fullName>
                </value>
                <value>
                    <fullName>In room – H&amp;C</fullName>
                </value>
                <value>
                    <fullName>Banqueting</fullName>
                </value>
                <value>
                    <fullName>Shared social area</fullName>
                </value>
                <value>
                    <fullName>Working Space</fullName>
                </value>
                <value>
                    <fullName>Restaurant - Self Serve</fullName>
                </value>
                <value>
                    <fullName>Restaurant - Served</fullName>
                </value>
                <value>
                    <fullName>Back-of-house</fullName>
                    <isActive>false</isActive>
                    <label>Back-of-house</label>
                </value>
                <value>
                    <fullName>Banqueting / hall</fullName>
                    <isActive>false</isActive>
                    <label>Banqueting / hall</label>
                </value>
                <value>
                    <fullName>Bar</fullName>
                    <isActive>false</isActive>
                    <label>Bar / café</label>
                </value>
                <value>
                    <fullName>Breakfast</fullName>
                    <isActive>false</isActive>
                    <label>Breakfast</label>
                </value>
                <value>
                    <fullName>Breakout</fullName>
                    <isActive>false</isActive>
                    <label>Breakout</label>
                </value>
                <value>
                    <fullName>Cafetaria</fullName>
                    <isActive>false</isActive>
                    <label>Cafeteria/canteen</label>
                </value>
                <value>
                    <fullName>Campus Cafe</fullName>
                    <isActive>false</isActive>
                    <label>Campus Cafe</label>
                </value>
                <value>
                    <fullName>Canteen</fullName>
                    <isActive>false</isActive>
                    <label>Canteen</label>
                </value>
                <value>
                    <fullName>Coffee Corner (+ patients + staff +guest)</fullName>
                    <isActive>false</isActive>
                    <label>Coffee Corner (+ patients + staff +guest)</label>
                </value>
                <value>
                    <fullName>Coffee corner/kitchen</fullName>
                    <isActive>false</isActive>
                    <label>Coffee corner/kitchen</label>
                </value>
                <value>
                    <fullName>Coffee location production area</fullName>
                    <isActive>false</isActive>
                    <label>Coffee location production area</label>
                </value>
                <value>
                    <fullName>Cosy Corner</fullName>
                    <isActive>false</isActive>
                    <label>Cosy Corner</label>
                </value>
                <value>
                    <fullName>Cosy corner, staff</fullName>
                    <isActive>false</isActive>
                    <label>Cosy corner, staff</label>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                    <isActive>false</isActive>
                    <label>Dinner</label>
                </value>
                <value>
                    <fullName>Food Court</fullName>
                    <isActive>false</isActive>
                    <label>Food Court</label>
                </value>
                <value>
                    <fullName>Grand cafetaria</fullName>
                    <isActive>false</isActive>
                    <label>Grand cafetaria</label>
                </value>
                <value>
                    <fullName>Hairdresser</fullName>
                    <isActive>false</isActive>
                    <label>Hairdresser</label>
                </value>
                <value>
                    <fullName>In meeting room</fullName>
                    <isActive>false</isActive>
                    <label>In meeting room</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Time_NOS__c</fullName>
        <inlineHelpText>This should reflect the initial “Buy” elements that will be included in the first invoice to the customer, such as machine revenues, ingredient start-kit, etc.</inlineHelpText>
        <label>One-Time NOS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppTypePlaceHolder__c</fullName>
        <label>OppTypePlaceHolder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Expiration</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Ingredient Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <displayFormat>OP{0000000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Other_ingredients__c</fullName>
        <label>Other ingredients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows Partner Contacts related to Opportunity</description>
        <label>Contact Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>PRF Partner Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Opportunity Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Partner Opportunity Owner)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Involved</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Party Involved)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Rewarded__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>If you win only part of the total opportunity value, fill in the percentage you won. This will calculate the pipeline CY NOS from pipeline CY NOS total</inlineHelpText>
        <label>Percentage Rewarded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Contact__c</fullName>
        <formula>Partner_Contact__r.Phone</formula>
        <label>Phone(Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPPORTUNITY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predicted_Volume__c</fullName>
        <label>Predicted Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>